(feature)[tmux]: Added vi nevigation mode to tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,10 @@
+# Color and themes:
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# Status bar:
+set -g status-position top
+
+# Navigation:
+set -g mode-key vi
