(tmux - Edited tmux top bar)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,11 +3,22 @@ run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# Setting up some better top bar:
+bg0_h="#313244"  # Base
+bg="#1e1e2e"   # Surface0
+fg0="#cdd6f4"  # Text
+fg1="#bac2de"  # Subtext0
+cyan="#89b4fa"
+teal="#94e2d5"
+mauve="#cba6f7"
+set -g window-status-format "#[fg=$fg1,bg=$bg,nobold,noitalics,nounderscore] #I#[fg=$fg0]:#[fg=$fg1]#W #[fg=$fg1]#F"
+set -g window-status-current-format "#[fg=$cyan,bg=$bg0_h,bold,noitalics,nounderscore] #I#[fg=$fg0]:#[fg=$cyan]#W #[fg=$fg0]#F"
+
 # Status bar:
-set -g status-position top
+setw -g status-position top
 
 # Navigation:
-set -g mode-key vi
+setw -g mode-key vi
 
 
 
