(feature)[hyprpaper]: Added a cool background and fixed monitors issue
* Added a directory called photos that stored personal photos including
  the wallpaper I use now
* Fixed the order of the monitors which was reversed

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -20,8 +20,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+# monitor=,preferred,auto,auto
+monitor=DP-1,1920x1080@60,0x0,1
+monitor=HDMI-A-1,1920x1080@60,1920x0,1
 
 ###################
 ### MY PROGRAMS ###
@@ -44,7 +45,8 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar
+exec-once = waybar & hyprpaper
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
