(feature)[hyprlock]: Added hyprlock config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -236,6 +236,7 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, # dwindle
+bind = $mainMod, Q, exec,hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
