(feature)[tmux]: Made tmux look better

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,4 @@
 # Color and themes:
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
@@ -16,11 +15,12 @@ set -g window-status-current-format "#[fg=$cyan,bg=$bg0_h,bold,noitalics,nounder
 
 # Status bar:
 setw -g status-position top
+set -g status-style bg=default
+set -g status-left ""
+set -g status-right "[#S]"
 
 # Navigation:
 setw -g mode-key vi
-
-
 
 # default shell:
 set-option -g default-shell /bin/zsh
