(feature)[lockscreen]: Made it so hyprland starts automatically

--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/backgrounds/shaded.png
+    path = ~/.config/personal_photos/wallpaper.png
     blur_passes = 2
     color = $base
 }
@@ -44,16 +44,16 @@ label {
 
 # USER AVATAR
 
-image {
-    monitor =
-    path = ~/.config/personal_photos/wallpaper.png
-    size = 100
-    border_color = $accent
-
-    position = 0, 75
-    halign = center
-    valign = center
-}
+# image {
+#     monitor =
+#     path = ~/.config/personal_photos/wallpaper.png
+#     size = 100
+#     border_color = $accent
+#
+#     position = 0, 75
+#     halign = center
+#     valign = center
+# }
 
 # INPUT FIELD
 input-field {
