--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -20,9 +20,19 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,auto
-monitor=DP-1,1920x1080@60,0x0,1
-monitor=HDMI-A-1,1920x1080@60,1920x0,1
+monitor = DP-2,1920x1080@144,1920x0,1
+monitor = HDMI-A-1,1920x1080@60,0x0,1
+
+workspace = 1,monitor:DP-2, default=true
+workspace = 2,monitor:DP-2
+workspace = 3,monitor:DP-2
+workspace = 4,monitor:DP-2
+workspace = 5,monitor:DP-2
+workspace = 6,monitor:DP-2
+workspace = 7,monitor:DP-2
+workspace = 8,monitor:DP-2
+workspace = 9,monitor:DP-2
+workspace = 0,monitor:HDMI-A-1, default=true
 
 ###################
 ### MY PROGRAMS ###
