(refactor)[hyprland]: switched file explorer from Dolphin to Nautilus

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ workspace = 0,monitor:HDMI-A-1, default=true
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = wofi --show drun
 
 
