(refactor)[hyprland]: Made the keybindings more comfortable
* Made it so the you switch places of windows using mod+shift+vimkey
* Made it so there will 3 scratchpad workspaces for spoity obsidian and
  todoist
* Made it so the browser, terminal, todoist, spotify, obsidiain will
  open up in the wanted locations on startup

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -55,8 +55,12 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = hyprlock & waybar & hyprpaper
-
+exec-once = hyprlock & waybar & hyprpaper # hyprland apps
+exec-once = [workspace special:obsidianSpace silent] obsidian
+exec-once = [workspace special:todoistSpace silent] todoist
+exec-once = [workspace special:musicSpace silent] spotify
+exec-once = [workspace 10] zen-browser
+exec-once = [workspace 1] kitty
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -237,22 +241,31 @@ device {
 $mainMod = Windows # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+
+# Open application:
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+
+# Layout changing:
+bind = $mainMod, P, togglefloating,
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, # dwindle
+
+# Closing applications:
+bind = $mainMod, C, killactive,
+bind = $mainMod, M, exit,
 bind = $mainMod, Q, exec,hyprlock
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod + vim keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+bind = $mainMod SHIFT, H, swapwindow, l
+bind = $mainMod SHIFT, L, swapwindow, r
+bind = $mainMod SHIFT, K, swapwindow, u
+bind = $mainMod SHIFT, J, swapwindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -278,13 +291,13 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# special workspace (scratchpads)
+bind = $mainMod, D, togglespecialworkspace, todoistSpace
+bind = $mainMod SHIFT, D, movetoworkspace, special:todoistSpace
+bind = $mainMod, S, togglespecialworkspace, obsidianSpace
+bind = $mainMod SHIFT, S, movetoworkspace, special:obsidianSpace
+bind = $mainMod, A, togglespecialworkspace, musicSpace
+bind = $mainMod SHIFT, A, movetoworkspace, special:musicSpace
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -320,9 +333,11 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+windowrule = workspace special:obsidianSpace, class:obsidian
+windowrule = workspace special:todoistSpace, class:Todoist
+windowrule = workspace special:musicSpace, class:Spotify
 
 # This fixes wierd scaling issues with gtk apps:
 xwayland {
     force_zero_scaling = true
 }
-
