(feature)[tmux]: Added mouse support

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -21,6 +21,7 @@ set -g status-right "[#S]"
 
 # Navigation:
 setw -g mode-key vi
+set -g mouse on
 
 # default shell:
 set-option -g default-shell /bin/zsh
