(feature)[hyprland]: Added a clipboard

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -53,12 +53,19 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-exec-once = hyprlock & waybar & hyprpaper # hyprland apps
+# UI apps:
+exec-once = hyprlock & waybar & hyprpaper
+
+# clipboard manager:
+exec = wl-paste --type text --watch cliphist store # Stores only text data
+exec = wl-paste --type image --watch cliphist store # Stores only image data
+
+# Workspace scrachpads for important apps:
 exec-once = [workspace special:obsidianSpace silent] obsidian
 exec-once = [workspace special:todoistSpace silent] todoist
 exec-once = [workspace special:musicSpace silent] spotify
+
+# Launcing useful apps from the start
 exec-once = [workspace 10] zen-browser
 exec-once = [workspace 1] kitty
 
@@ -246,6 +253,7 @@ $mainMod = Windows # Sets "Windows" key as main modifier
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, space, exec, $menu
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Layout changing:
 bind = $mainMod, P, togglefloating,
