--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -77,7 +77,7 @@ exec-once = [workspace 1] kitty
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+env = HYPRSHOT_DIR,Pictures/Screenshots/
 
 ###################
 ### PERMISSIONS ###
@@ -274,6 +274,14 @@ bind = $mainMod SHIFT, H, swapwindow, l
 bind = $mainMod SHIFT, L, swapwindow, r
 bind = $mainMod SHIFT, K, swapwindow, u
 bind = $mainMod SHIFT, J, swapwindow, d
+
+# Screenshots:
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
