(feature)[hyprland]: Added a virtual machine
* Made it so I have a special workspace for my kali-vm and I can access
  it using $mainmod+tab

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -360,3 +360,20 @@ windowrule = workspace special:musicSpace, class:Spotify
 xwayland {
     force_zero_scaling = true
 }
+
+
+########################
+### VIRTUAL MACHINES ###
+########################
+
+# This starts getting annoying maybe just go back virt-manager
+# scripts:
+$launch_kali_vm = virt-manager --show-domain-console "kali-linux" --connect qemu:///system
+
+
+# binds:
+bind = $mainMod, tab, togglespecialworkspace, virtualmachine
+
+# autostart:
+exec-once = [workspace special:virtualmachine silent] $launch_kali_vm
+windowrule = workspace special:virtualmachine, title:kali-linux on QEMU/KVM
