(feature)[hyprland]: Added a notification daemon

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -47,7 +47,7 @@ workspace = 0,monitor:$monitor2, default=true
 $terminal = kitty
 $fileManager = nautilus
 $menu = wofi --show drun
-
+$notification_center = swaync-client -t
 
 #################
 ### AUTOSTART ###
@@ -257,6 +257,7 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, N, exec, $notification_center
 
 # Layout changing:
 bind = $mainMod, P, togglefloating,
