--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -2,7 +2,7 @@
   "position": "top",
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
-  "modules-right": ["pulseaudio", "battery", "network", "clock"],
+  "modules-right": ["pulseaudio", "battery", "memory", "clock"],
   "clock": {
     "format": "<span foreground='#f5c2e7'>   </span>{:%a %d %H:%M}",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
@@ -22,6 +22,11 @@
     "format-icons": ["", "", "", "", ""],
     "tooltip-format": "{time}"
   },
+  "memory": {
+    "interval": 30,
+	"format": "{used:0.1f}G/{total:0.1f}G {0}%"
+  },
+/*
   "network": {
     "format-wifi": "<span size='13000' foreground='#f5e0dc'>  </span>{essid}",
     "format-ethernet": "<span size='13000' foreground='#f5e0dc'>󰤭  </span> Disconnected",
@@ -29,6 +34,7 @@
     "format-disconnected": "<span size='13000' foreground='#f5e0dc'>  </span>Disconnected",
     "tooltip-format-wifi": "Signal Strenght: {signalStrength}%"
   },
+  */
   "pulseaudio": {
       "format": "{icon}  {volume}%",
       "format-muted": "",
