(feature)[hyprland]: Added kdeconnect to a scartchpad which is activated with mod+w

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -67,6 +67,7 @@ exec = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = [workspace special:obsidianSpace silent] obsidian
 exec-once = [workspace special:todoistSpace silent] todoist
 exec-once = [workspace special:musicSpace silent] spotify
+exec-once = [workspace special:kdeConnect silent] kdeconnect-app
 
 # Launcing useful apps from the start
 exec-once = [workspace 10] zen-browser
@@ -318,6 +319,8 @@ bind = $mainMod, S, togglespecialworkspace, obsidianSpace
 bind = $mainMod SHIFT, S, movetoworkspace, special:obsidianSpace
 bind = $mainMod, A, togglespecialworkspace, musicSpace
 bind = $mainMod SHIFT, A, movetoworkspace, special:musicSpace
+bind = $mainMod, W, togglespecialworkspace, kdeConnect
+bind = $mainMod SHIFT, W, movetoworkspace, special:kdeConnect
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -356,6 +359,7 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 windowrule = workspace special:obsidianSpace, class:obsidian
 windowrule = workspace special:todoistSpace, class:Todoist
 windowrule = workspace special:musicSpace, class:Spotify
+windowrule = workspace special:kdeConnect, class:org.kde.kdeconnect.app
 
 # This fixes wierd scaling issues with gtk apps:
 xwayland {
