--- a/laptop_dotfiles/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/laptop_dotfiles/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -31,13 +31,13 @@ bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Google search using rofi
 bind = $mainMod ALT, O, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings 
 bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # Toggle animations ON/OFF
 bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
-bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
+bind = $mainMod, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
 bind = $mainMod CTRL, R, exec, $scriptsDir/RofiThemeSelector.sh # KooL Rofi Menu Theme Selector
 bind = $mainMod CTRL SHIFT, R, exec, pkill rofi || true && $scriptsDir/RofiThemeSelector-modified.sh # modified Rofi Theme Selector
 
 
 bind = $mainMod, F, fullscreen # whole full screen
-bind = $mainMod CTRL, F, fullscreen, 1 # fake full screen
+bind = $mainMod SHIFT, F, fullscreen, 1 # fake full screen
 # bind = $mainMod, SPACE, togglefloating, #Float Mode
 bind = $mainMod ALT, SPACE, exec, hyprctl dispatch workspaceopt allfloat #All Float Mode
 bind = $mainMod SHIFT, Return, exec, [float; move 15% 5%; size 70% 60%] $term # Dropdown terminal
