--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -79,8 +79,6 @@ exec-once = [workspace 1] kitty
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
 env = HYPRSHOT_DIR,Pictures/Screenshots/
 
 ###################
@@ -104,6 +102,8 @@ env = HYPRSHOT_DIR,Pictures/Screenshots/
 ### LOOK AND FEEL ###
 #####################
 
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+env = HYPRCURSOR_SIZE,24
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -250,7 +250,8 @@ device {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = Windows # Sets "Windows" key as main modifier
-
+$HOME = /home/horikita
+$scriptsDir = $HOME/.config/hypr/scripts
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
 # Open application:
@@ -267,6 +268,7 @@ bind = $mainMod, F, fullscreen, # dwindle
 
 # Closing applications:
 bind = $mainMod, C, killactive,
+bind = $mainMod SHIFT, C, exec, $scriptsDir/KillActiveProcess.sh
 bind = $mainMod, M, exit,
 bind = $mainMod, Q, exec,hyprlock
 
