(feaure)[rofi]: Terminal apps can be launched now
* Wofi did not support launching terminal applications so I replaced it
  with rofi which does support it
* I also added a cool theme for it

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ workspace = 0,monitor:$monitor2, default=true
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = rofi -show drun
 $notification_center = swaync-client -t
 
 #################
@@ -258,7 +258,7 @@ $scriptsDir = $HOME/.config/hypr/scripts
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, space, exec, $menu
-bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, $scriptsDir/ClipManager.sh
 bind = $mainMod, N, exec, $notification_center
 
 # Layout changing:
